tests/baselines/reference/unterminatedStringLiteralWithBackslash1.errors.txt
unterminatedStringLiteralWithBackslash1.ts(1,3): error TS1126: Unexpected end of text.


==== unterminatedStringLiteralWithBackslash1.ts (1 errors) ====
    "\
      
!!! error TS1126: Unexpected end of text.